Set up address model

--- a/config/locales/views/listings/en.yml
+++ b/config/locales/views/listings/en.yml
@@ -19,6 +19,7 @@ en:
       edit: Edit
       save: Save
       contact: Send message
+      location: Location
     tags_field:
       description: >
         You can add up to 5 tags to your add.
